--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Eleventh navbar example">
         <div class="container-fluid">
+          <img src="./img for codes/Shymaa in a circular photo.png" alt="an icon of Shymaa Selim photo" style="width: 40px; border-radius: 50%; margin-right: 1%;">
           <a class="navbar-brand" href="#">Shymaa Selim</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
